tests/ui-unstable/non-string.stderr
error: proc macro panicked
 --> $DIR/non-string.rs:6:5
  |
6 |     indoc!(64);
  |     ^^^^^^^^^^^
  |
  = help: message: argument must be a single string literal
