tests/ui-unstable/non-string.rs
#![feature(proc_macro_hygiene)]

use indoc::indoc;

fn main() {
    indoc!(64);
}
